# tea

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  create.py  install.sh  setup.sh  update.sh  update_tea.sh
.github/: README.md
.github/workflows/: ci.yml
DSAMuonSF/: convert_schemaV1_to_schemaV2.py
DSAMuonSF/2016_Jpsi/: NUM_DisplacedID_DEN_dSAMuons_abseta_pt_schemaV1.json
DSAMuonSF/2017_Jpsi/: NUM_DisplacedID_DEN_dSAMuons_abseta_pt_schemaV1.json
DSAMuonSF/2018_Jpsi/: NUM_DisplacedID_DEN_dSAMuons_abseta_pt_schemaV1.json
DSAMuonSF/2018_Z/: NUM_DisplacedID_DEN_dSAMuons_abseta_pt_schemaV2.json
DSAMuonSF/id_cosmic/: NUM_DisplacedID_DEN_dSAMuons_absdxy_copy.json
DSAMuonSF/reco_cosmic/: NUM_RECO_DEN_dSAMuons_copy.json
_site/about/: index.html
_site/docs/: Gemfile  index.html
apps/examples/: abcd_plotter.py  condor_runner.py  datacards_producer.py  hepmc2root.cpp  histogrammer.cpp  limits_plotter.py  limits_producer.py  merge.py  plot_abcd_hists.py  plotter.py  sf_writer.py  skimmer.cpp  submitter.py
ci/: collect-environment.sh  environment-linux.yml  environment.yml  smoke-test.sh  smoke_histogrammer_config.py  smoke_skimmer_config.py
configs/das_exercises/: task1_simple_histograms.py  task2_plotting.py  task3_skimmer.py  task4_advanced_histograms.py  task5_data_mc.py  task6_limits_config.py  task7_files_config.py  task7_plotting.py  task7_significance_config.py
configs/examples/: datacards_config.py  golden_json_config.py  histogrammer_config.py  input_file_list.py  limits_config.py  minimal_plotter_config.py  scale_factors_config.py  sfwriter_config.py  skimmer_config.py
data/: dimuonEffSF2018.json  dimuonEffSF2018_newMatching.json  dimuonEffSF2018_newMatching_minBkg3.json  dimuonEffSFs2018_newMatching_JPsiDimuonsDSAChi2DCADPhi.json
data/dimuonEffSFs/: dimuonEffSFs2016postVFP_DSA_pt_irr2_v3.json  dimuonEffSFs2016postVFP_DSA_pt_irr_v3.json  dimuonEffSFs2016postVFP_PatDSA_pt_irr2_v3.json  dimuonEffSFs2016postVFP_PatDSA_pt_irr_v3.json  dimuonEffSFs2016postVFP_Pat_pt_irr2_v3.json  dimuonEffSFs2016postVFP_Pat_pt_irr_v3.json  dimuonEffSFs2016postVFP_invMassJPsiBin_v3.json  dimuonEffSFs2016preVFP2016postVFP201720182022preEE2022postEE2023preBPix2023postBPix_invMassJPsiBin_v3.json  dimuonEffSFs2016preVFP_DSA_pt_irr2_v3.json  dimuonEffSFs2016preVFP_DSA_pt_irr_v3.json  dimuonEffSFs2016preVFP_PatDSA_pt_irr2_v3.json  dimuonEffSFs2016preVFP_PatDSA_pt_irr_v3.json  dimuonEffSFs2016preVFP_Pat_pt_irr2_v3.json  dimuonEffSFs2016preVFP_Pat_pt_irr_v3.json  dimuonEffSFs2016preVFP_invMassJPsiBin_v3.json  dimuonEffSFs2017_DSA_pt_irr2_v3.json  dimuonEffSFs2017_DSA_pt_irr_v3.json  dimuonEffSFs2017_PatDSA_pt_irr2_v3.json  dimuonEffSFs2017_PatDSA_pt_irr_v3.json  dimuonEffSFs2017_Pat_pt_irr2_v3.json  dimuonEffSFs2017_Pat_pt_irr_v3.json  dimuonEffSFs2017_invMassJPsiBin_v3.json  dimuonEffSFs2018.json  dimuonEffSFs2018_DSA_pt_irr2_v3.json  dimuonEffSFs2018_DSA_pt_irr_v3.json  dimuonEffSFs2018_PatDSA_pt_irr2_v3.json  dimuonEffSFs2018_PatDSA_pt_irr_v3.json  dimuonEffSFs2018_Pat_pt_irr2_v3.json  dimuonEffSFs2018_Pat_pt_irr_v3.json  dimuonEffSFs2018_invMassJPsiBin_v3.json  dimuonEffSFs2022postEE_DSA_pt_irr2_v3.json  dimuonEffSFs2022postEE_DSA_pt_irr_v3.json  dimuonEffSFs2022postEE_PatDSA_pt_irr2_v3.json  dimuonEffSFs2022postEE_PatDSA_pt_irr_v3.json  dimuonEffSFs2022postEE_Pat_pt_irr2_v3.json  dimuonEffSFs2022postEE_Pat_pt_irr_v3.json  dimuonEffSFs2022postEE_invMassJPsiBin_v3.json  dimuonEffSFs2022preEE_DSA_pt_irr2_v3.json  dimuonEffSFs2022preEE_DSA_pt_irr_v3.json  dimuonEffSFs2022preEE_PatDSA_pt_irr2_v3.json  (+18 more)
docs/: Dockerfile.jekyll  Gemfile  _config.yml  about.markdown  index.html  index.md  run.sh
docs/_data/: docs.yml
docs/_docs/: index.md
docs/_includes/: docs_nav.html  head.html  topnav.html
docs/_layouts/: default.html  docs.html  page.html
docs/_sass/: _bootstrap.scss  _jekyll-doc-theme.scss
docs/_site/: 404.html  allposts.html  feed.xml  index.html  redirects.json  robots.txt  search.json  sitemap.xml
docs/assets/: search.json
libs/core/: CMakeLists.txt
libs/core/include/: ArgsManager.hpp  ConfigManager.hpp  CutFlowManager.hpp  Event.hpp  EventProcessor.hpp  EventReader.hpp  EventWriter.hpp  Helpers.hpp  Logger.hpp  Multitype.hpp  PhysicsObject.hpp  Profiler.hpp  ScaleFactorsManager.hpp
libs/core/src/: ArgsManager.cpp  ConfigManager.cpp  CutFlowManager.cpp  Event.cpp  EventProcessor.cpp  EventReader.cpp  EventWriter.cpp  PhysicsObject.cpp  Profiler.cpp  ScaleFactorsManager.cpp
libs/extensions/: CMakeLists.txt
libs/extensions/include/: ExtensionsHelpers.hpp  HepMCParticle.hpp  HepMCProcessor.hpp  Jet.hpp  Muon.hpp  NanoDimuonVertex.hpp  NanoElectron.hpp  NanoEvent.hpp  NanoEventProcessor.hpp  NanoGenParticle.hpp  NanoJet.hpp  NanoMETXYCorr_METPhi.hpp  NanoMuon.hpp
libs/extensions/src/: HepMCParticle.cpp  Jet.cpp  Muon.cpp  NanoDimuonVertex.cpp  NanoEvent.cpp  NanoEventProcessor.cpp  NanoGenParticle.cpp  NanoJet.cpp  NanoMuon.cpp
libs/histogramming/: CMakeLists.txt
libs/histogramming/include/: HistogramsHandler.hpp
libs/histogramming/src/: HistogramsFiller.cpp  HistogramsHandler.cpp
pylibs/: CMakeLists.txt
pylibs/abcdTools/: ABCDHelper.py  ABCDHistogramsHelper.py  ABCDPlotter.py
pylibs/helpers/: teaHelpers.py
pylibs/limits/: DatacardsProcessor.py  HistogramsManager.py
pylibs/logger/: Logger.py
pylibs/plotting/: CmsLabelsManager.py  Histogram.py  HistogramNormalizer.py  HistogramPlotter.py  Legend.py  Sample.py  Styler.py
pylibs/scaleFactors/: CorrectionWriter.py  ScaleFactorProducer.py  ScaleFactorsReader.py
pylibs/submitter/: SubmissionManager.py
templates/: CMakeLists.template.txt  Event.template.hpp  HistogramsFiller.template.cpp  PhysicsObject.template.hpp  app.template.cpp  condor_config.template.sub  condor_config_default.template.sub  condor_config_lxplus.template.sub  condor_config_naf.template.sub  condor_config_vub.template.sub  condor_run.template.sh  config.template.py  histogrammer.template.cpp  histogrammer_config.template.py  printer.template.cpp  printer_config.template.py  task4_histogrammer.template.cpp
(+62 files in other folders)
